--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "backend/**/*.js", "use": "@vercel/node" },
-      { "src": "frontend/**/*", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/", "dest": "frontend/index.html" },
-      { "src": "/(.*)", "dest": "frontend/$1" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "backend/index.js", "use": "@vercel/node" },
+    { "src": "frontend/index.html", "use": "@vercel/static" }
+  ]
+}
